--- a/MultiShop.Presentation/Views/Shared/_Layout.cshtml
+++ b/MultiShop.Presentation/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@* Razor View - Empty *@
-@using MultiShop.Data
-@model List<Category>
+@using MultiShop.Business.Dtos
+@model List<CategoryDto>
 <!DOCTYPE html>
 <html lang="en">
 
