--- a/MultiShop.Presentation/Views/Home/Components/Category/Default.cshtml
+++ b/MultiShop.Presentation/Views/Home/Components/Category/Default.cshtml
@@ -7,13 +7,17 @@
             <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                 <a class="text-decoration-none" href="">
                     <div class="cat-item d-flex align-items-center mb-4">
-                        <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" style="height: 200px !important; object-fit: cover !important;" src="@item.Image" alt="No Photo">
-                        </div>
-                        <div class="flex-fill pl-3">
-                            <h6>@item.CategoryName</h6>
-                            <small class="text-body">@item.Products?.Count() products</small>
-                        </div>
+                        <a href="/Category/@item.CategoryId">
+                            <div class="overflow-hidden" style="width: 100px; height: 100px;">
+                                <img class="img-fluid" style="height: 200px !important; object-fit: contain !important;" src="@item.Image" alt="No Photo">
+                            </div>
+                        </a>                        
+                        <a href="/Category/GetProductByCategory/@item.CategoryId" style="text-decoration: none">
+                            <div class="flex-fill pl-3">
+                                <h6>@item.CategoryName</h6>
+                                <small class="text-body">@item.Products?.Count() products</small>
+                            </div>
+                        </a>
                     </div>
                 </a>
             </div>
