--- a/MultiShop.Presentation/Views/Product/Detail.cshtml
+++ b/MultiShop.Presentation/Views/Product/Detail.cshtml
@@ -24,13 +24,13 @@
                         if (item.Order == 1)
                         {
                             <div class="carousel-item active">
-                                <img class="w-100 h-100" src="@item.Image" alt="Image">
+                                <img class="w-100" style="object-fit: contain; height: 700px" src="@item.Image" alt="Image">
                             </div>
                         }
                         else
                         {
                             <div class="carousel-item">
-                                <img class="w-100 h-100" src="@item.Image" alt="Image">
+                                <img class="w-100" style="object-fit: contain; height: 700px" src="@item.Image" alt="Image">
                             </div>
                         }
                     }
@@ -92,7 +92,7 @@
                 </div>
                 @if (Model.Product.SalePrice != null)
                 {
-                    <h3 class="font-weight-semi-bold mb-4">$@Model.Product.SalePrice</h3><h5 class="text-muted ml-2"><del>    @Model.Product.Price</del></h5>
+                    <h3 class="font-weight-semi-bold mb-4">$@Model.Product.SalePrice</h3><h5 class="text-muted ml-2"><del>$@Model.Product.Price</del></h5>
                 }
                 else
                 {
@@ -275,17 +275,37 @@
                             <div class="col-md-6">
                                 <h4 class="mb-4">Leave a review</h4>
                                 <small>Your email address will not be published. Required fields are marked *</small>
-                                <div class="d-flex my-3">
-                                    <p class="mb-0 mr-2">Your Rating * :</p>
-                                    <div class="text-primary">
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                    </div>
-                                </div>
                                 <form action="/Product/Comment" method="get">
+                                    <div class="form-group d-flex my-3">
+                                        <p class="mb-0 mr-2">Your Rating * :</p>
+                                        <div class="text-primary" id="rating">
+                                            <i class="far fa-star star" data-index="1" style="cursor: pointer; font-size: 1rem;"></i>
+                                            <i class="far fa-star star" data-index="2" style="cursor: pointer; font-size: 1rem;"></i>
+                                            <i class="far fa-star star" data-index="3" style="cursor: pointer; font-size: 1rem;"></i>
+                                            <i class="far fa-star star" data-index="4" style="cursor: pointer; font-size: 1rem;"></i>
+                                            <i class="far fa-star star" data-index="5" style="cursor: pointer; font-size: 1rem;"></i>
+                                        </div>
+                                        <script>
+                                            document.addEventListener('DOMContentLoaded', () => {
+                                                const stars = document.querySelectorAll('.star');
+
+                                                stars.forEach((star, index) => {
+                                                    star.addEventListener('click', () => {
+                                                        stars.forEach((s, i) => {
+                                                            if (i <= index) {
+                                                                s.classList.remove('far');
+                                                                s.classList.add('fas');
+                                                            } else {
+                                                                s.classList.remove('fas');
+                                                                s.classList.add('far');
+                                                            }
+                                                        });
+                                                    });
+                                                });
+                                            });
+                                        </script>
+                                    </div>
+                                    <input type="hidden" id="rating-value" name="rating" value="0">
                                     <div class="form-group">
                                         <label for="message">Your Review *</label>
                                         <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
