--- a/MultiShop.Presentation/Views/Shared/Components/Navbar/Default.cshtml
+++ b/MultiShop.Presentation/Views/Shared/Components/Navbar/Default.cshtml
@@ -11,7 +11,7 @@
                 <div class="navbar-nav w-100">
                     @foreach(var item in Model)
                     {
-                        <a href="" class="nav-item nav-link">@item.CategoryName</a>
+                        <a href="/Category/GetProductByCategory/@item.CategoryId" class="nav-item nav-link">@item.CategoryName</a>
                     }
 
                     @* <div class="nav-item dropdown dropright">
